# Bitcoin-analysis

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKTEST_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DOCKER_QUICKSTART.md  DOCKER_ROADMAP.md  FRONTEND_SETUP.md  GEMINI_ROADMAP_TEST_RESULTS.md  POC_COMPLETE.md  PROJECT_SUMMARY.txt  QUICK_REFERENCE.md  README.md  ROADMAP_STATUS.md  backend.Dockerfile  backtest_results.csv  backtest_strategy.py  conftest.py  docker-compose.override.yml  docker-compose.yml  download_historical_data.py  frontend.Dockerfile  frontend.dev.Dockerfile  pyproject.toml  requirements.txt  test_all_endpoints.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/: bitcoin_market.db
data/hot/: BTCUSDT_1d.parquet  BTCUSDT_1h.parquet  BTCUSDT_4h.parquet
docs/: 2025_data_update.md  API_GUIDE.md  API_GUIDE.md.old  AUTO_UPDATE.md  README.md  architecture.md  fix_24h_metrics.md
docs/archive/: AUTO_UPDATE_QUICK.md  INTEGRATION_COMPLETE.md
docs/progress/: PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md
docs/setup/: INSTALLATION.md
frontend-nextjs/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend-nextjs/app/: globals.css  layout.tsx
frontend-nextjs/types/: dashboard.ts
scripts/: README.md  auto_update.sh  bitcoin-update.service  bitcoin-update.timer  demo_cornish_fisher_var.py  download_2025_api.py  download_historical_data.py  incremental_update.py  install_cron.sh  smart_update.py  test_api.py  update_2025_data.py
src/: __init__.py
src/api/: __init__.py  api_server.py  api_server_demo.py  api_server_demo.py.old  api_server_parquet.py  dependencies.py  main.py  models.py  requirements.txt
src/api/routes/: __init__.py  (+3 more)
src/application/: __init__.py
src/cli/: scheduler_cli.py
src/data/: free_onchain.py
src/domain/: __init__.py
src/indicators/: adaptive.py
src/infrastructure/: __init__.py
src/models/: regime_detector.py
src/presentation/: __init__.py
src/services/: auto_update_data.py  data_integration_service.py
src/shared/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_imports.py  test_live_integration.py  test_modified_var.py  test_phase2.py  test_real_btc_var.py  test_system_comprehensive.py  test_websocket.py  test_websocket_handler.py  validate_dashboard.py
tests/integration/: __init__.py  test_dashboard_pages.py  test_data_pipeline.py  test_domain_integration.py
tests/unit/: __init__.py  test_analysis_service.py  test_api_smoke.py  test_cornish_fisher_var.py  test_duckdb_query_engine.py  test_market_data.py  test_market_data_service.py  test_parquet_manager.py  test_pipeline_orchestrator.py  test_risk_calculator.py  test_scheduler_service.py  test_technical_analysis.py
(+71 files in other folders)
