[tool.poetry]
name = "bitcoin-market-intelligence"
version = "0.1.0"
description = "Bitcoin Market Intelligence & Risk Management Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

# Data processing
pyarrow = "^14.0.0"
duckdb = "^0.9.0"

# Machine learning
scikit-learn = "^1.3.0"
hmmlearn = "^0.3.0"

# Scheduling & pipeline
apscheduler = "^3.10.0"

# API Layer
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0.0"

# Infrastructure (optional - install manually if using)
# supabase = "^2.0.0"  # Uncomment if using Supabase
# boto3 = "^1.34.0"  # Uncomment if using AWS S3/R2

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
ruff = "^0.1.0"
black = "^23.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ===== Ruff Configuration (Fast Linter) =====
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by Black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# ===== Black Configuration (Formatter) =====
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

# ===== mypy Configuration (Type Checker) =====
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "plotly.*",
    "streamlit.*",
    "duckdb.*",
]
ignore_missing_imports = true

# ===== pytest Configuration =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# ===== Coverage Configuration =====
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
